# velvic-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  app.yaml  docker-compose.yml
.github/workflows/: backend-ci.yml  e2e.yml  evals.yml  frontend-ci.yml
backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase1_data_model.py  0003_chat_orchestrator.py  0004_phase3_followups.py  0005_llm_call_log.py
backend/app/: main.py
backend/app/admin/: backfill.py  reset_data.py  seed.py
backend/app/api/routers/: auth.py  briefings.py  chat.py  companies.py  drivers.py  engine_calls.py  health.py  llm_usage.py
backend/app/api/schemas/: auth.py  briefings.py  chat.py  companies.py  drivers.py  llm_usage.py
backend/app/auth/: deps.py  models.py  security.py  service.py
backend/app/chat/: AGENTS.md  anthropic_messages_client.py  citations.py  followups.py  llm_log.py  models.py  orchestrator.py  prompts.py  sdk_hooks.py  sdk_mcp.py  thread_title.py  tools.py  topic_gate.py  types.py
backend/app/chat/providers/: anthropic.py  base.py  factory.py  mock.py
backend/app/core/: cache.py  config.py  db.py  errors.py  logging.py  streaming.py
backend/app/crawlers/: AGENTS.md  __init__.py  base.py  company_ir_rss.py  esap.py  fi_insider.py  fi_short.py  fred.py  mfn.py  models.py  registry.py  riksbank.py  scb.py  yahoo_finance.py
backend/app/engine/: AGENTS.md  __init__.py  adhoc_query.py  envelope.py  ledger.py  models.py  registry.py
backend/app/engine/drivers/: attribution.py  briefing.py  prompts.py  tools.py  types.py
backend/app/engine/shared/: macro.py  peers.py  prices.py
backend/app/ingestion/: AGENTS.md  companies.py  macro.py  models.py  news.py  prices.py
backend/app/pipeline/: AGENTS.md  celery_app.py  schedules.py  tasks.py
backend/app/tenancy/: middleware.py
backend/scripts/: dump_openapi.py
backend/tests/: conftest.py
backend/tests/integration/: test_app_boot.py
backend/tests/property/: test_citations_property.py  test_daily_return.py  test_password_hash_property.py
backend/tests/unit/: test_adhoc_query_guard.py  test_anthropic_provider.py  test_briefing_parsing.py  test_citations.py  test_config_url.py  test_crawlers_registry.py  test_engine_registry.py  test_followups.py  test_orchestrator.py  test_security.py  test_streaming.py  test_tool_dispatch.py  test_topic_gate.py  test_yahoo_parse.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  DATA_SOURCES.md  DEPLOYMENT.md  ENGINEERING_STANDARDS.md  PRD.md  PROMPTS.md  SECURITY.md
docs/adr/: 0001-modular-monolith.md  0002-three-tier-data-layer.md  0003-engine-narrator-pattern.md  0004-multi-llm-abstraction.md  0005-source-isolation.md  0006-spec-driven-workflow.md  0007-monorepo-with-do-app-platform.md  0008-design-tokens-from-radix.md  0009-adopt-claude-agent-sdk.md
docs/playbooks/: add-new-data-source.md  add-new-engine-tool.md  add-new-module.md  deploy-and-rollback.md  secret-rotation.md
docs/specs/: README.md
evals/: README.md  promptfoo.yaml
evals/briefing_quality/: README.md
frontend/: .eslintrc.cjs  AGENTS.md  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
(+113 files in other folders)
