[project]
name = "velvic-monitor-backend"
version = "0.1.0"
description = "AI-native investor relations workspace — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.12.0",
    "pydantic-settings==2.14.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.31.0",
    "alembic==1.13.3",
    "redis==5.0.8",
    "celery[redis]==5.4.0",
    "httpx==0.27.2",
    "loguru==0.7.2",
    "python-jose[cryptography]==3.3.0",
    # bcrypt 5.x has Python 3.14 wheels; we use it directly (no passlib).
    # passlib 1.7.4 is unmaintained and breaks on bcrypt 5.x and Py 3.13+.
    "bcrypt==5.0.0",
    "python-multipart==0.0.10",
    "email-validator==2.2.0",
    "sentry-sdk[fastapi]==2.14.0",
    "sqlglot==25.20.2",
    # yfinance handles Yahoo's anti-bot impersonation (curl_cffi) so plain
    # HTTPS calls don't get 403'd. Tier-1 isolation means we can swap to a
    # paid feed (Millistream / Refinitiv) later without touching the Engine.
    "yfinance==1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "hypothesis==6.112.1",
    "httpx==0.27.2",
    "ruff==0.6.8",
    "black==24.8.0",
    "mypy==1.11.2",
    "types-python-jose",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501"]  # black handles line length

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E402"]
"tests/*" = ["B011"]
# FastAPI's `Depends()` / `Cookie()` defaults are the framework idiom; B008
# (function call in argument default) is a false positive for these.
"app/api/routers/*.py" = ["B008", "N812"]
"app/auth/deps.py" = ["B008"]
# `date` (the type) aliased to `Date` to avoid colliding with the FastAPI
# path-parameter name `date` in routers/schemas; this is a deliberate
# naming choice, not a casing bug.
"app/api/schemas/*.py" = ["N812"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["celery.*", "yfinance", "yfinance.*"]
ignore_missing_imports = true

# Celery's `@celery_app.task(bind=True, ...)` decorator is structurally
# untyped; mypy --strict can't reason about it. Pipeline task bodies are
# kept thin (orchestration only -- see pipeline/AGENTS.md), so the typing
# value-add is low. Suppress the noisy categories at the module boundary
# rather than adding a `# type: ignore` to every task.
[[tool.mypy.overrides]]
module = "app.pipeline.tasks"
disable_error_code = ["misc", "no-untyped-def", "no-any-return"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests requiring a live Postgres",
    "flaky: known-flaky tests, quarantined pending fix",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
